Allow MessageLoop to attempt to queue tasks on message_pump_android after calling Quit().

Like other platform implementations, tasks queued up after quitting will
simply not be run.

Bug: 758738
Change-Id: I3c7badbb5c1fe4e91856dfdaa49b16e016f9f8b1